RESOLVED FIXED293113
Js/Wasm engine produce an invalid ref.cast runtime fail for func.ref types in hot functions.
https://bugs.webkit.org/show_bug.cgi?id=293113
Summary Js/Wasm engine produce an invalid ref.cast runtime fail for func.ref types in...
igor.yakovlev
Reported 2025-05-16 06:10:59 PDT
Created attachment 475266 [details] Wasm and Html files to reproduce the issue Executing .wasm file produced with the latest Kotlin compiler fails with an runtime error "ref.cast failed to cast". This seems it can be reproduced only for hot functions (hight order compiler tier?) and on Safary ONLY on iPhone/iPad devices (not on MacOs or the emulator). The iOS version is 18.5. MacOs Safary works best. V8 engine browsers also works. Steps to reproduce: 1) unpack attached CMP-8139.zip 2) start server in a unpacked directory 3) open web site on mobile device 4) check that "NOT OK" written (and ref.cast fail in the developer console)
Attachments
Wasm and Html files to reproduce the issue (29.80 KB, application/zip)
2025-05-16 06:10 PDT, igor.yakovlev
no flags
Radar WebKit Bug Importer
Comment 1 2025-05-16 08:00:18 PDT
Yusuke Suzuki
Comment 2 2025-06-05 13:16:01 PDT
Caused by bug 260820
Yusuke Suzuki
Comment 3 2025-06-05 13:19:05 PDT
Yusuke Suzuki
Comment 4 2025-06-05 14:42:52 PDT
*** Bug 293832 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2025-06-05 18:15:03 PDT
Committed 295902@main (f63d69092df2): <https://commits.webkit.org/295902@main> Reviewed commits have been landed. Closing PR #46379 and removing active labels.
EWS
Comment 6 2025-06-05 21:36:28 PDT
Committed 289651.560@safari-7621-branch (a4cec9e0102d): <https://commits.webkit.org/289651.560@safari-7621-branch> Reviewed commits have been landed. Closing PR #3151 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.