Js/Wasm engine produce an invalid ref.cast runtime fail for func.ref types in hot functions. https://bugs.webkit.org/show_bug.cgi?id=293113 rdar://151464447

Reviewed by Daniel Liu and Keith Miller.

274558@main changed rtt field of WasmToWasmImportableFunction from
CompactPtr to normal pointer, but it didn't change OMG code generator's
loadCompactPtr. So we are materializing a pointer incorrectly. This
patch removes loadCompactPtr and use normal Load for OMG.

* JSTests/wasm/stress/resources/wasm-gc-ref-cast.wasm: Added.
* JSTests/wasm/stress/resources/wasm-gc-ref-cast.wat: Added.
* JSTests/wasm/stress/wasm-gc-ref-cast.mjs: Added.
* Source/JavaScriptCore/wasm/WasmFormat.h:
* Source/JavaScriptCore/wasm/WasmOMGIRGenerator.cpp:
(JSC::Wasm::OMGIRGenerator::emitLoadRTTFromFuncref):
* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::emitLoadRTTFromFuncref):

Canonical link: https://commits.webkit.org/295902@main